--- a/fetal_health.ipynb
+++ b/fetal_health.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -22,10 +22,11 @@
     "from sklearn.decomposition import PCA\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.linear_model import LassoCV, LogisticRegressionCV\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.metrics import precision_score\n",
+    "from sklearn.metrics import precision_score, accuracy_score\n",
+    "import keras\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -413,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +437,6 @@
       "Logistic Regression:\n",
       "[10. 10. 10.]\n",
       "Train score = 0.8971774193548387\n",
-      "Train score = 0.8971774193548387\n",
       "Train precision: Normal = 0.9235245220282626, Suspect = 0.7068965517241379, Pathological = 0.9099099099099099\n",
       "Test score = 0.8840125391849529\n",
       "Test precision: Normal = 0.9224806201550387, Suspect = 0.6125, Pathological = 0.9285714285714286\n",
@@ -447,7 +447,15 @@
       "Train score = 1.0\n",
       "Train precision: Normal = 1.0, Suspect = 1.0, Pathological = 1.0\n",
       "Test score = 0.9420062695924765\n",
-      "Test precision: Normal = 0.9602385685884692, Suspect = 0.8292682926829268, Pathological = 0.9433962264150944\n"
+      "Test precision: Normal = 0.9602385685884692, Suspect = 0.8292682926829268, Pathological = 0.9433962264150944\n",
+      "\n",
+      "\n",
+      "GradientBoosting:\n",
+      "{'learning_rate': 0.1, 'max_depth': 8, 'n_estimators': 800}\n",
+      "Train score = 1.0\n",
+      "Train precision: Normal = 1.0, Suspect = 1.0, Pathological = 1.0\n",
+      "Test score = 0.9498432601880877\n",
+      "Test precision: Normal = 0.9642147117296223, Suspect = 0.8846153846153846, Pathological = 0.9122807017543859\n"
      ]
     }
    ],
@@ -498,15 +506,20 @@
     "print(f\"Train precision: Normal = {precision[0]}, Suspect = {precision[1]}, Pathological = {precision[2]}\")\n",
     "print(f\"Test score = {rfc.score(x_test, y_test)}\")\n",
     "precision = precision_score(y_test, rfc.predict(x_test), average=None)\n",
+    "print(f\"Test precision: Normal = {precision[0]}, Suspect = {precision[1]}, Pathological = {precision[2]}\")\n",
+    "\n",
+    "print(\"\\n\\nGradientBoosting:\")\n",
+    "params = {\"n_estimators\": [400,800,1000,1200], \"learning_rate\": [0.1], \"max_depth\": [6,8,10,12]}\n",
+    "gb = GridSearchCV(GradientBoostingClassifier(random_state=123),params, scoring=\"accuracy\", n_jobs=-1)\n",
+    "gb.fit(x_train, y_train)\n",
+    "print(gb.best_params_)\n",
+    "print(f\"Train score = {gb.score(x_train, y_train)}\")\n",
+    "precision = precision_score(y_train, gb.predict(x_train), average=None)\n",
+    "print(f\"Train precision: Normal = {precision[0]}, Suspect = {precision[1]}, Pathological = {precision[2]}\")\n",
+    "print(f\"Test score = {gb.score(x_test, y_test)}\")\n",
+    "precision = precision_score(y_test, gb.predict(x_test), average=None)\n",
     "print(f\"Test precision: Normal = {precision[0]}, Suspect = {precision[1]}, Pathological = {precision[2]}\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
