--- a/fetal_health.ipynb
+++ b/fetal_health.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
     "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.metrics import precision_score, accuracy_score\n",
+    "from sklearn.metrics import precision_score, accuracy_score, classification_report\n",
     "import keras\n",
     "\n",
     "%load_ext autoreload\n",
@@ -434,28 +434,22 @@
       "fhr_mode best params = (0.3333333333333333, 1, True, False, True, False, False), abs corr = 0.38683921557148615\n",
       "\n",
       "\n",
-      "Logistic Regression:\n",
-      "[10. 10. 10.]\n",
-      "Train score = 0.8971774193548387\n",
-      "Train precision: Normal = 0.9235245220282626, Suspect = 0.7068965517241379, Pathological = 0.9099099099099099\n",
-      "Test score = 0.8840125391849529\n",
-      "Test precision: Normal = 0.9224806201550387, Suspect = 0.6125, Pathological = 0.9285714285714286\n",
-      "\n",
-      "\n",
-      "RandomForest:\n",
-      "{'criterion': 'entropy', 'n_estimators': 400}\n",
-      "Train score = 1.0\n",
-      "Train precision: Normal = 1.0, Suspect = 1.0, Pathological = 1.0\n",
-      "Test score = 0.9420062695924765\n",
-      "Test precision: Normal = 0.9602385685884692, Suspect = 0.8292682926829268, Pathological = 0.9433962264150944\n",
-      "\n",
-      "\n",
       "GradientBoosting:\n",
-      "{'learning_rate': 0.1, 'max_depth': 8, 'n_estimators': 800}\n",
+      "{'max_depth': 4, 'n_estimators': 800}\n",
       "Train score = 1.0\n",
       "Train precision: Normal = 1.0, Suspect = 1.0, Pathological = 1.0\n",
       "Test score = 0.9498432601880877\n",
-      "Test precision: Normal = 0.9642147117296223, Suspect = 0.8846153846153846, Pathological = 0.9122807017543859\n"
+      "Test precision: Normal = 0.969939879759519, Suspect = 0.8674698795180723, Pathological = 0.8928571428571429\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      normal       0.97      0.97      0.97       497\n",
+      "     suspect       0.87      0.82      0.84        88\n",
+      "pathological       0.89      0.94      0.92        53\n",
+      "\n",
+      "    accuracy                           0.95       638\n",
+      "   macro avg       0.91      0.91      0.91       638\n",
+      "weighted avg       0.95      0.95      0.95       638\n",
+      "\n"
      ]
     }
    ],
@@ -479,38 +473,39 @@
     "    nlt = utils.NonLinearTransformer(target=\"fetal_health\", dmax=10, bmax=3, verbose=True)\n",
     "    nlt.fit(df[[c,\"fetal_health\"]])\n",
     "    df = nlt.transform(df)\n",
-    "# df = nlt.transform(df)\n",
     "df.loc[:,x_cols] = StandardScaler().fit_transform(df[x_cols])\n",
     "\n",
     "x_train, x_test, y_train, y_test = train_test_split(df[x_cols], df[\"fetal_health\"], test_size=0.3, random_state=123, stratify=df[\"fetal_health\"])\n",
     "\n",
-    "print(\"\\n\\nLogistic Regression:\")\n",
-    "logreg = LogisticRegressionCV(Cs=[0.001,0.01,0.1,1.0,10.0,15.0,20.0], n_jobs=-1, random_state=123)\n",
-    "logreg.fit(x_train, y_train)\n",
-    "print(logreg.C_)\n",
-    "print(f\"Train score = {logreg.score(x_train, y_train)}\")\n",
-    "precision = precision_score(y_train, logreg.predict(x_train), average=None)\n",
-    "print(f\"Train precision: Normal = {precision[0]}, Suspect = {precision[1]}, Pathological = {precision[2]}\")\n",
-    "print(f\"Test score = {logreg.score(x_test, y_test)}\")\n",
-    "precision = precision_score(y_test, logreg.predict(x_test), average=None)\n",
-    "print(f\"Test precision: Normal = {precision[0]}, Suspect = {precision[1]}, Pathological = {precision[2]}\")\n",
+    "# print(\"\\n\\nLogistic Regression:\")\n",
+    "# logreg = LogisticRegressionCV(Cs=[1.0,10.0,15.0], n_jobs=-1, random_state=123)\n",
+    "# logreg.fit(x_train, y_train)\n",
+    "# print(logreg.C_)\n",
+    "# print(f\"Train score = {logreg.score(x_train, y_train)}\")\n",
+    "# precision = precision_score(y_train, logreg.predict(x_train), average=None)\n",
+    "# print(f\"Train precision: Normal = {precision[0]}, Suspect = {precision[1]}, Pathological = {precision[2]}\")\n",
+    "# print(f\"Test score = {logreg.score(x_test, y_test)}\")\n",
+    "# precision = precision_score(y_test, logreg.predict(x_test), average=None)\n",
+    "# print(f\"Test precision: Normal = {precision[0]}, Suspect = {precision[1]}, Pathological = {precision[2]}\")\n",
     "\n",
-    "print(\"\\n\\nRandomForest:\")\n",
-    "params = {\"n_estimators\": [100,400,600], \"criterion\": [\"gini\",\"entropy\",\"log_loss\"]}\n",
-    "rfc = GridSearchCV(RandomForestClassifier(n_jobs=-1, random_state=123, bootstrap=False, class_weight=\"balanced\"), \n",
-    "                   params, scoring=\"accuracy\", n_jobs=-1)\n",
-    "rfc.fit(x_train, y_train)\n",
-    "print(rfc.best_params_)\n",
-    "print(f\"Train score = {rfc.score(x_train, y_train)}\")\n",
-    "precision = precision_score(y_train, rfc.predict(x_train), average=None)\n",
-    "print(f\"Train precision: Normal = {precision[0]}, Suspect = {precision[1]}, Pathological = {precision[2]}\")\n",
-    "print(f\"Test score = {rfc.score(x_test, y_test)}\")\n",
-    "precision = precision_score(y_test, rfc.predict(x_test), average=None)\n",
-    "print(f\"Test precision: Normal = {precision[0]}, Suspect = {precision[1]}, Pathological = {precision[2]}\")\n",
+    "# print(\"\\n\\nRandomForest:\")\n",
+    "# params = {\"n_estimators\": [100,400,600]}\n",
+    "# rfc = GridSearchCV(RandomForestClassifier(n_jobs=-1, random_state=123, bootstrap=False, \n",
+    "#                                           class_weight=\"balanced\", criterion=\"entropy\"), \n",
+    "#                    params, scoring=\"accuracy\", n_jobs=-1)\n",
+    "# rfc.fit(x_train, y_train)\n",
+    "# print(rfc.best_params_)\n",
+    "# print(f\"Train score = {rfc.score(x_train, y_train)}\")\n",
+    "# precision = precision_score(y_train, rfc.predict(x_train), average=None)\n",
+    "# print(f\"Train precision: Normal = {precision[0]}, Suspect = {precision[1]}, Pathological = {precision[2]}\")\n",
+    "# print(f\"Test score = {rfc.score(x_test, y_test)}\")\n",
+    "# precision = precision_score(y_test, rfc.predict(x_test), average=None)\n",
+    "# print(f\"Test precision: Normal = {precision[0]}, Suspect = {precision[1]}, Pathological = {precision[2]}\")\n",
     "\n",
     "print(\"\\n\\nGradientBoosting:\")\n",
-    "params = {\"n_estimators\": [400,800,1000,1200], \"learning_rate\": [0.1], \"max_depth\": [6,8,10,12]}\n",
-    "gb = GridSearchCV(GradientBoostingClassifier(random_state=123),params, scoring=\"accuracy\", n_jobs=-1)\n",
+    "params = {\"n_estimators\": [400,800,1000,1200], \"max_depth\": [2,4,8]}\n",
+    "gb = GridSearchCV(GradientBoostingClassifier(random_state=123), \n",
+    "                  params, scoring=\"accuracy\", n_jobs=-1)\n",
     "gb.fit(x_train, y_train)\n",
     "print(gb.best_params_)\n",
     "print(f\"Train score = {gb.score(x_train, y_train)}\")\n",
@@ -518,7 +513,9 @@
     "print(f\"Train precision: Normal = {precision[0]}, Suspect = {precision[1]}, Pathological = {precision[2]}\")\n",
     "print(f\"Test score = {gb.score(x_test, y_test)}\")\n",
     "precision = precision_score(y_test, gb.predict(x_test), average=None)\n",
-    "print(f\"Test precision: Normal = {precision[0]}, Suspect = {precision[1]}, Pathological = {precision[2]}\")\n"
+    "print(f\"Test precision: Normal = {precision[0]}, Suspect = {precision[1]}, Pathological = {precision[2]}\")\n",
+    "print(classification_report(y_test, gb.predict(x_test), labels=[1,2,3], \n",
+    "                            target_names=[\"normal\",\"suspect\",\"pathological\"]))\n"
    ]
   }
  ],
